--- a/templates/students/index.html
+++ b/templates/students/index.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Students Index</title>
-</head>
-<body>
-    <h1 style="color: red; text-align: center"> All students </h1>
-    {{students}}
-    <table>
+{% extends 'layouts/base.html' %}
+{% block title %} Students {% endblock %}
+{% block body %}
+    <table class="table">
         <tr>
             <th>ID</th>
             <th>Name</th>
@@ -19,10 +13,9 @@
                 <td>{{student['id']}}</td>
                 <td>{{student['name']}}</td>
                 <td>{{student['track']}}</td>
-                <td>{{student['image']}}</td>
+                <td><img width="200" height="200"
+                        src="{{url_for('static', filename='students/images/'+student.image)}}">  </td>
             </tr>
         {% endfor %}
     </table>
-
-</body>
-</html>
+{% endblock %}
