--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -14,7 +14,7 @@
             <th>track</th>
             <th>Image</th>
             <th>Show</th>
-            <th>Delete</th>
+
         </tr>
         {% for student in students %}
             <tr>
@@ -23,8 +23,7 @@
                 <td>{{student['track']}}</td>
                 <td><img width="200" height="200"
                         src="{{url_for('static', filename='students/images/'+student.image)}}">  </td>
-                <td> <a class="btn btn-info" href="{{url_for('students.show', id=student.id)}}"> Show </a></td>
-                <td> <a class="btn btn-danger" href="{{student.get_delete_url}}"> Delete </a></td>
+                <td> <a class="btn btn-info" href="{{url_for('stds.get', id=student.id)}}"> Show </a></td>
 
             </tr>
         {% endfor %}
